--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.15",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
