--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.15",
