--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 cramjam==2.5.0
 fastparquet==0.8.3
 Flask==2.2.2
+Flask-Cors==3.0.10
 fsspec==2022.8.2
 gunicorn==20.1.0
 importlib-metadata==5.0.0
