--- a/server/package.json
+++ b/server/package.json
@@ -2,14 +2,22 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "seeder.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
+    "graphql": "^15.8.0",
+    "mongoose": "^6.7.5"
+  },
+  "devDependencies": {
     "dotenv": "^16.0.3",
-    "mongoose": "^6.7.3"
+    "nodemon": "^2.0.20"
   }
 }
