--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://flask-nfl.onrender.com/",
   "dependencies": {
+    "@apollo/client": "^3.7.1",
     "@reduxjs/toolkit": "^1.8.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,6 +13,7 @@
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "graphql": "^16.6.0",
     "msw": "^0.47.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
