--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@types/node": "^16.11.66",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "d3": "^7.7.0",
+    "framer-motion": "^7.8.0",
     "graphql": "^16.6.0",
     "msw": "^0.47.4",
     "react": "^18.2.0",
@@ -21,6 +23,7 @@
     "react-loading": "^2.0.3",
     "react-redux": "^8.0.4",
     "react-scripts": "5.0.1",
+    "react-use-measure": "^2.1.1",
     "recharts": "^2.1.15",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -50,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@types/d3": "^7.4.0",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.1.8"
